--- a/templates/szablon.html
+++ b/templates/szablon.html
@@ -4,5 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zadanie rekrutacyjne</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
+
+    {{ data | safe }}
+
+
+</body>
+</html>
